# treebox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  install.sh  mkdocs.yml  pyproject.toml
.claude/skills/: treebox
.claude/skills/treebox-e2e/: SKILL.md  fixture.sh
.claude/skills/treebox-e2e/references/: scenarios.md
.github/workflows/: autofix.yml  ci.yml  docs.yml  release.yml
docs/: agents.md  configuration.md  how-it-works.md  index.md  install.md  usage.md
docs/javascripts/: treebox.js
docs/stylesheets/: extra.css
hooks/: copy_page.py
scripts/: golden-diff.sh  validate.sh
skills/treebox/: SKILL.md
src/treebox/: __init__.py  assets.py  cli.py  config.py  ecosystems.py  forge.py  git.py  harnesses.py  locking.py  models.py  names.py  output.py  provision.py  resolve.py  state.py  status.py  system.py
src/treebox/assets/: pre-push
src/treebox/assets/container/: Dockerfile  allowed-domains.sh  container.json  firewall.json  init-firewall.sh  post-create.sh
src/treebox/runners/: __init__.py  base.py  docker.py  host.py
tests/: conftest.py  test_contract.py  test_integration.py  test_units.py
tests/golden/: README.md  create-docker-json.txt  create-docker-print.txt  create-dryrun-docker-json.txt  create-dryrun-docker.txt  create-dryrun-host-json.txt  create-dryrun-host.txt  create-host-json.txt  create-host-print.txt  create-slash-json.txt  doctor-docker-json.txt  doctor-docker.txt  doctor-host-json.txt  doctor-host-no-env.txt  doctor-host.txt  doctor-no-login.txt  enter-docker-json.txt  enter-docker-print.txt  enter-host-json.txt  enter-host-print.txt
